experimenting with the hierarchy page rendering to avoid the gap between the title column and .record-details on wide screens

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1078,7 +1078,7 @@ main {
         }
         &.tablesorter-default .tablesorter-filter {
             font-family: $font-primary;
-            font-size: 1em;
+            font-size: 0.92em;
             padding: 5px;
             background: white;
             -webkit-border-radius: 0.3em;
@@ -1756,9 +1756,10 @@ main {
         }
         span.record-details {
             display: grid;
-            grid-template-columns: 1fr 1.5fr 1fr;
-            gap: 0.6em;
+            grid-template-columns: 1fr 1.5fr 1.5fr;
+            gap: 1em;
             font-size: 0.92em;
+            line-height: 1.4em;
         }
         .fieldset-header {
             margin-bottom: 1em;
@@ -1777,7 +1778,7 @@ main {
                     }
                 }
             }
-            .browsed-item {
+            .browsed-record {
                 background-color: lighten($light-grey,3%);
                 border-left: 5px solid $primary;
                 padding: 0px 8px;
@@ -1785,7 +1786,6 @@ main {
             .toggle-tab-button {
                 z-index: 5;
                 padding: 5px 7px;
-                width: 26px;
                 height: 26px;
                 position: relative;
                 background-color: white;
@@ -1929,7 +1929,7 @@ main {
             }
             .duplicate {
                 display: grid;
-                grid-template-columns: 0.2fr 1fr;
+                grid-template-columns: auto 1fr;
                 gap: 1.5em;
                 position: relative;
                 &:not(:last-of-type) {
